# payment-engine

./: .gitignore  Cargo.toml  README.md  README.org  docker-compose.yml
benches/: speed.rs
docker/: Dockerfile
src/: engine.rs  lib.rs
src/entities/: account.rs  channel.rs  mod.rs  transaction.rs
src/errors/: mod.rs
src/filehandler/: mod.rs
src/tests/: mod.rs
src/tests/data/: bench.csv  dispute_test.csv  duplicate_tx_test.csv  precision_test.csv  resolve_invalid_test.csv  resolve_test.csv
tests/data/: chargeback_invalid_test.csv  chargeback_test.csv  header_only_test.csv
