[package]
name = "payment-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/index.html
unsafe_code = "forbid"
non_ascii_idents = "forbid"

absolute_paths_not_starting_with_crate = "warn"
unnameable_test_items = "warn"
unit-bindings = "warn"
unreachable-pub = "warn"

unused = { level = "deny", priority = -1 }
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_extern_crates = "deny"
unused_macros = "deny"
unused_imports = "deny"
deprecated_in_future = "deny"
missing_docs = "deny"


[lints.clippy]
enum_glob_use = "deny"
unused_async = "deny"
vec_init_then_push = "allow"

